--- a/app/frontend/templates/includes/_navbar.html
+++ b/app/frontend/templates/includes/_navbar.html
@@ -22,7 +22,7 @@
                         type="submit"><i class="bi bi-search"></i></button>
             </form>
 
-            {% if true %}
+            {% if false %}
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 justify-content-end">
                     <ul class="navbar-nav me-2 mb-2 mb-lg-0 justify-content-start">
                         <li class="nav-item">
