--- a/app/frontend/templates/search.html
+++ b/app/frontend/templates/search.html
@@ -24,37 +24,33 @@
                 <div class="tab-content" id="v-pills-tabContent">
                     <div class="tab-pane fade show active" id="v-pills-concerts" role="tabpanel"
                          aria-labelledby="v-pills-concerts-tab">
-                        {% for n in range(5) %}
+                        {% for c in concerts %}
                             <div class="card mb-3">
                                 <div class="row g-0">
-                                    <div class="col-md-3">
-                                        <svg class="bd-placeholder-img card-img-top" width="100%" height="100%"
-                                             xmlns="http://www.w3.org/2000/svg" role="img"
-                                             aria-label="Placeholder: Thumbnail"
-                                             preserveAspectRatio="xMidYMid slice" focusable="false"><title>
-                                            Placeholder</title>
-                                            <rect width="100%" height="100%" fill="#55595c"/>
-                                        </svg>
+                                    <div class="col-md-3 transp">
+                                        <img class="card-img-top img-fluid img-cover" role="img"
+                                             src="{{ c["concert_photo"] }}" alt="img">
                                     </div>
                                     <div class="col">
                                         <div class="card-body row">
-                                            <h5 class="card-title display-5">Concert name {{ n }}</h5>
+                                            <h5 class="card-title display-5">{{ c["concert_name"] }}</h5>
                                         </div>
                                         <div class="row">
                                             <div class="col-md">
                                                 <div class="card-body">
                                                     <h5 class="card-title">Place</h5>
-                                                    <p class="card-text text-truncate">Place</p>
+                                                    <p class="card-text text-truncate">{{ c["concert_address"] }}</p>
                                                 </div>
                                             </div>
                                             <div class="col-md">
                                                 <div class="card-body">
                                                     <h5 class="card-title">Date</h5>
-                                                    <p class="card-text">date</p>
+                                                    <p class="card-text">{{ c["concert_date"]|dt }}</p>
                                                 </div>
                                             </div>
                                         </div>
-                                        <a href="{{ url_for('concert_page', id=n) }}" class="stretched-link text-decoration-none"></a>
+                                        <a href="{{ url_for('concert_page', id=c["concert_id"]) }}"
+                                           class="stretched-link text-decoration-none"></a>
                                     </div>
                                 </div>
                             </div>
@@ -62,23 +58,21 @@
                     </div>
                     <div class="tab-pane fade" id="v-pills-artists" role="tabpanel"
                          aria-labelledby="v-pills-artists-tab">
-                        {% for n in range(5) %}
+                        {% for a in artists %}
                             <div class="card mb-3">
                                 <div class="row g-0">
-                                    <div class="col-md-3">
-                                        <svg class="bd-placeholder-img card-img-top" width="100%" height="100%"
-                                             xmlns="http://www.w3.org/2000/svg" role="img"
-                                             aria-label="Placeholder: Thumbnail"
-                                             preserveAspectRatio="xMidYMid slice" focusable="false"><title>
-                                            Placeholder</title>
-                                            <rect width="100%" height="100%" fill="#55595c"/>
-                                        </svg>
+                                    <div class="col-3">
+                                        <div class="">
+                                            <img class="card-img-top img-fluid img-cover" role="img"
+                                                 src="{{ a["artist_photo"] }}" alt="img">
+                                        </div>
                                     </div>
                                     <div class="col align-self-center">
                                         <div class="card-body ">
-                                            <h5 class="card-title display-5 text-truncate">Artist name  {{ n }}</h5>
+                                            <h5 class="card-title display-5 text-truncate">{{ a["artist_name"] }}</h5>
                                         </div>
-                                        <a href="{{ url_for('artists_page', id=n) }}" class="stretched-link text-decoration-none"></a>
+                                        <a href="{{ url_for('artists_page', id=a["artist_id"]) }}"
+                                           class="stretched-link text-decoration-none"></a>
                                     </div>
 
                                 </div>
