fix artist info

--- a/app/frontend/templates/favorites.html
+++ b/app/frontend/templates/favorites.html
@@ -37,7 +37,7 @@
                             <h1 class="display-5">Concerts</h1>
                         </div>
 
-                        {% for n in range(5) %}
+                        {% for n in range(13, 18) %}
                             <div class="card mb-3">
                                 <div class="row g-0">
                                     <div class="col-md-3">
@@ -78,7 +78,7 @@
                             <h1 class="display-5">Artists</h1>
                         </div>
 
-                        {% for n in range(5) %}
+                        {% for n in range(1, 6) %}
                             <div class="card mb-3">
                                 <div class="row g-0">
                                     <div class="col-md-3">
