--- a/app/frontend/templates/includes/_navbar.html
+++ b/app/frontend/templates/includes/_navbar.html
@@ -11,18 +11,18 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 justify-content-start">
                 <li class="nav-item">
                     <a class="nav-link" style="color: black !important;" aria-current="page" href="#"><i
-                            class="bi bi-geo-alt"></i><u>Location</u></a>
+                            class="bi bi-geo-alt"></i><u>Voronezh</u></a>
                 </li>
             </ul>
 
             <form class="d-flex justify-content-center mb-2 mb-lg-0" action="{{ url_for('search_page') }}">
                 <input class="form-control remove-glow  border-end-0 border border-dark rounded-pill rounded-end"
-                       style="min-width: 400px;" name="search" type="search" placeholder="Search" aria-label="Search">
+                       style="min-width: 350px;" name="search" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn remove-glow btn-outline-dark border-start-0 rounded-pill rounded-start"
                         type="submit"><i class="bi bi-search"></i></button>
             </form>
 
-            {% if false %}
+            {% if true %}
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 justify-content-end">
                     <ul class="navbar-nav me-2 mb-2 mb-lg-0 justify-content-start">
                         <li class="nav-item">
