--- a/app/frontend/templates/base.html
+++ b/app/frontend/templates/base.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">  <!-- changing lang -->
+<html lang="en">
 <head>
     {% block head %}
-        <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
 
         <link href="../static/theme.min.css" rel="stylesheet">
-
         <link href="../static/main.css" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/gh/kartik-v/bootstrap-star-rating@4.0.9/css/star-rating.min.css" media="all" rel="stylesheet" type="text/css" />
+        <link href="https://cdn.jsdelivr.net/gh/kartik-v/bootstrap-star-rating@4.0.9/themes/krajee-fas/theme.css" media="all" rel="stylesheet" type="text/css" />
 
         <!-- Yandex.Metrika counter -->
         <script type="text/javascript">
@@ -35,7 +36,6 @@
         <!-- /Yandex.Metrika counter -->
 
         {% block styles %}
-            <!-- Bootstrap CSS -->
         {% endblock %}
 
         <title>{% block title %}{% endblock %}</title>
@@ -52,6 +52,11 @@
 
 {% include 'includes/_footer.html' %}
 
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/gh/kartik-v/bootstrap-star-rating@4.0.9/js/star-rating.min.js" type="text/javascript"></script>
+<script src="https://cdn.jsdelivr.net/gh/kartik-v/bootstrap-star-rating@4.0.9/themes/krajee-fas/theme.js"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"
         integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG"
