--- a/app/frontend/templates/concert.html
+++ b/app/frontend/templates/concert.html
@@ -23,7 +23,7 @@
                     <div class="col-md-2 mt-2 px-2 d-flex flex-column">
                         <div class="py-4 bg-white">
                             <h5 class="">Place</h5>
-                            <p class="">{{ concert["concert_address"] }}</p>
+                            <p class="">{{ concert["hall_id"] }}</p>
                             <h5 class="">Date</h5>
                             <p class="">{{ concert["concert_date"]|dt }}</p>
                             <p><a tabindex="0" class="btn btn-lg btn-primary text-light" role="button"
