--- a/app/frontend/templates/registration.html
+++ b/app/frontend/templates/registration.html
@@ -4,20 +4,20 @@
 {% block content %}
 
     <div class="form-signin text-center mt-4">
-        <form>
+        <form method="post">
             <img class="mb-4" src="../static/logo.png" alt="" width="300" height="150">
             <h1 class="h3 mb-3 fw-normal">Sign Up</h1>
             <div class="form-floating">
-                <input type="email" class="form-control remove-glow" id="floatingInput" placeholder="name@example.com">
+                <input type="email" class="form-control remove-glow" name="email" id="floatingInput" placeholder="name@example.com" required>
                 <label for="floatingInput">Email address</label>
             </div>
             <div class="form-floating">
-                <input type="password" class="form-control remove-glow" id="floatingPassword" placeholder="Password">
-                <label for="floatingPassword">Password</label>
+                <input type="password" class="form-control remove-glow" name='password' id="floatingPassword1" placeholder="Password" required>
+                <label for="floatingPassword1">Password</label>
             </div>
             <div class="form-floating">
-                <input type="password" class="form-control remove-glow" id="floatingPassword" placeholder="Password">
-                <label for="floatingPassword">Repeat password</label>
+                <input type="password" class="form-control remove-glow" name='password_check' id="floatingPassword2" placeholder="Password" required>
+                <label for="floatingPassword2">Repeat password</label>
             </div>
 
             <div class="checkbox mb-3 mt-3">
