--- a/app/frontend/templates/includes/_navbar.html
+++ b/app/frontend/templates/includes/_navbar.html
@@ -9,9 +9,15 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 justify-content-start">
-                <li class="nav-item">
-                    <a class="nav-link" style="color: black !important;" aria-current="page" href="#"><i
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" style="color: black !important;" data-bs-toggle="dropdown"
+                       aria-expanded="false" aria-current="page" href="#"><i
                             class="bi bi-geo-alt"></i><u>Voronezh</u></a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="{{ url_for('change_city', id=1) }}">Voronezh</a></li>
+                        <li><a class="dropdown-item" href="{{ url_for('change_city', id=2) }}">Moscow</a></li>
+                        <li><a class="dropdown-item" href="{{ url_for('change_city', id=3) }}">Saint-Petersburg</a></li>
+                    </ul>
                 </li>
             </ul>
 
@@ -26,7 +32,8 @@
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 justify-content-end">
                     <ul class="navbar-nav me-2 mb-2 mb-lg-0 justify-content-start">
                         <li class="nav-item">
-                            <a class="nav-link" style="color: black !important;" aria-current="page" href="{{ url_for('tickets_page') }}"><u>My
+                            <a class="nav-link" style="color: black !important;" aria-current="page"
+                               href="{{ url_for('tickets_page') }}"><u>My
                                 tickets</u></a>
                         </li>
                     </ul>
@@ -55,10 +62,12 @@
             {% else %}
                 <ul class="navbar-nav nav-pills ms-auto mb-2 mb-lg-0 justify-content-end">
                     <li class="nav-item me-2 mb-2 mb-lg-0 text-center">
-                        <a class="nav-link" style="color: black !important;" aria-current="page" href="{{ url_for('login_page') }}">Login</a>
+                        <a class="nav-link" style="color: black !important;" aria-current="page"
+                           href="{{ url_for('login_page') }}">Login</a>
                     </li>
                     <li class="nav-item me-2 mb-2 mb-lg-0 text-center">
-                        <a class="nav-link active" style="color: white !important;" href="{{ url_for('registration_page') }}">Sign Up</a>
+                        <a class="nav-link active" style="color: white !important;"
+                           href="{{ url_for('registration_page') }}">Sign Up</a>
                     </li>
                 </ul>
             {% endif %}
