--- a/app/frontend/templates/login.html
+++ b/app/frontend/templates/login.html
@@ -8,11 +8,11 @@
             <img class="mb-4" src="../static/logo.png" alt="" width="300" height="150">
             <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
             <div class="form-floating"> {# Supported both username and email on backend #}
-                <input type="email" class="form-control remove-glow" name="login" id="floatingInput" placeholder="name@example.com">
-                <label for="floatingInput">Email address</label>
+                <input type="text" class="form-control remove-glow" name="login" id="floatingInput" minlength="6" placeholder="name@example.com" required>
+                <label for="floatingInput">Email address or login</label>
             </div>
             <div class="form-floating">
-                <input type="password" class="form-control remove-glow" name="password" id="floatingPassword" placeholder="Password">
+                <input type="password" class="form-control remove-glow" name="password" id="floatingPassword" minlength="8" placeholder="Password" required>
                 <label for="floatingPassword">Password</label>
             </div>
 
