--- a/app/frontend/templates/registration.html
+++ b/app/frontend/templates/registration.html
@@ -9,19 +9,19 @@
             <h1 class="h3 mb-3 fw-normal">Sign Up</h1>
 
             <div class="form-floating">
-                <input type="text" class="form-control remove-glow" name="nickname" id="floatingInput" placeholder="Nickname">
-                <label for="floatingInput">Nickname</label>
+                <input type="text" class="form-control remove-glow" name="nickname" id="floatingInput" minlength="6" placeholder="Login" required>
+                <label for="floatingInput">Login</label>
             </div>
             <div class="form-floating">
-                <input type="email" class="form-control remove-glow" name="email" id="floatingInput" placeholder="name@example.com">
+                <input type="email" class="form-control remove-glow" name="email" id="floatingInput" placeholder="name@example.com" required>
                 <label for="floatingInput">Email address</label>
             </div>
             <div class="form-floating">
-                <input type="password" class="form-control remove-glow" name="password" id="floatingPassword" placeholder="Password">
+                <input type="password" class="form-control remove-glow" name="password" id="floatingPassword" minlength="8" placeholder="Password" required>
                 <label for="floatingPassword">Password</label>
             </div>
             <div class="form-floating">
-                <input type="password" class="form-control remove-glow" name="password_check" id="floatingPassword" placeholder="Password">
+                <input type="password" class="form-control remove-glow" name="password_check" id="floatingPassword" minlength="8" placeholder="Password" required>
                 <label for="floatingPassword">Repeat password</label>
             </div>
 
