--- a/app/frontend/templates/favorites.html
+++ b/app/frontend/templates/favorites.html
@@ -11,10 +11,10 @@
                          xmlns="http://www.w3.org/2000/svg"
                          aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
                         <rect width="700%" height="100%" fill="#777"/>
-                    </svg>
+                    </svg> {# TODO #}
                 </div>
                 <div class="col-lg-8">
-                    <h1 class="display-5 lh-1 mb-3 ms-3">Username</h1>
+                    <h1 class="display-5 lh-1 mb-3 ms-3">Username</h1> {# TODO #}
                 </div>
             </div>
 
@@ -37,7 +37,7 @@
                             <h1 class="display-5">Concerts</h1>
                         </div>
 
-                        {% for n in range(13, 18) %}
+                        {% for n in range(13, 18) %} {# TODO #}
                             <div class="card mb-3">
                                 <div class="row g-0">
                                     <div class="col-md-3">
@@ -78,7 +78,7 @@
                             <h1 class="display-5">Artists</h1>
                         </div>
 
-                        {% for n in range(1, 6) %}
+                        {% for n in range(1, 6) %} {# TODO #}
                             <div class="card mb-3">
                                 <div class="row g-0">
                                     <div class="col-md-3">
