--- a/app/frontend/templates/settings.html
+++ b/app/frontend/templates/settings.html
@@ -11,7 +11,7 @@
                          xmlns="http://www.w3.org/2000/svg"
                          aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
                         <rect width="700%" height="100%" fill="#777"/>
-                    </svg>
+                    </svg> {# TODO #}
                 </div>
                 <div class="col-lg-8">
                     <h1 class="display-5 lh-1 mb-3 ms-3">Username</h1>
@@ -34,7 +34,7 @@
                     </div>
                     <div class="d-flex flex-column flex-grow-1 ms-5">
                         <div class="mb-3">
-                            <h1 class="display-5">Spotify</h1>
+                            <h1 class="display-5">Spotify</h1> {# TODO #}
                             <div>
                                 <a class="btn btn-lg btn-primary text-light rounded-pill">
                                     Connect to Spotify
@@ -45,7 +45,7 @@
                             </div>
                         </div>
                         <div class="mb-3">
-                            <h1 class="display-5">Google Calendar</h1>
+                            <h1 class="display-5">Google Calendar</h1> {# TODO #}
                             <div>
                                 <a class="btn btn-lg btn-primary text-light rounded-pill">
                                     Connect to Google Calendar
@@ -55,7 +55,7 @@
                         </div>
 
                         <div class="mb-3">
-                            <h1 class="display-5">Change Avatar</h1>
+                            <h1 class="display-5">Change Avatar</h1> {# TODO #}
                             <div>
                                 <label for="formFile" class="form-label">Upload avatar</label>
                                 <input class="form-control remove-glow" type="file" id="formFile">
@@ -64,7 +64,7 @@
 
                         <div class="mb-3">
 
-                            <h1 class="display-5">Security</h1>
+                            <h1 class="display-5">Security</h1> {# TODO #}
                             <form>
                                 <div class="mb-3">
                                     <label for="InputOldPassword" class="form-label">Old password</label>
