--- a/app/frontend/templates/artist.html
+++ b/app/frontend/templates/artist.html
@@ -6,16 +6,19 @@
         <div class="container col-xxl-8 px-2 py-2 bg-white">
             <div class="row flex-lg-row align-items-center g-0 pt-5 pb-1">
                 <div class="col-10 col-sm-8 col-lg-4 mb-3 mx-auto px-4 py-4 d-flex justify-content-center">
-                    {#                    <svg class="rounded-circle bd-placeholder-img d-block img-fluid text-center" width="300"#}
-                    {#                         height="300"#}
-                    {#                         xmlns="http://www.w3.org/2000/svg"#}
-                    {#                         aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">#}
-                    {#                        <rect width="700%" height="100%" fill="#777"/>#}
-                    {#                    </svg>#}
-                    <div class="ratio ratio-1x1">
-                        <img class="card-img-top img-fluid img-cover" width="300" height="300"
-                             src="{{ artist["artist"]["artist_photo"] }}" alt="img">
-                    </div>
+                    {% if artist["artist"]["artist_photo"] %}
+                        <div class="ratio ratio-1x1">
+                            <img class="card-img-top img-fluid img-cover" width="300" height="300"
+                                 src="{{ artist["artist"]["artist_photo"] }}" alt="img">
+                        </div>
+                    {% else %}
+                        <div class="bg-light rounded-circle bd-placeholder-img">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="300" height="300" fill="#777"
+                                 class="bi bi-people p-5" viewBox="0 0 16 16">
+                                <path d="M15 14s1 0 1-1-1-4-5-4-5 3-5 4 1 1 1 1h8zm-7.978-1A.261.261 0 0 1 7 12.996c.001-.264.167-1.03.76-1.72C8.312 10.629 9.282 10 11 10c1.717 0 2.687.63 3.24 1.276.593.69.758 1.457.76 1.72l-.008.002a.274.274 0 0 1-.014.002H7.022zM11 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0zM6.936 9.28a5.88 5.88 0 0 0-1.23-.247A7.35 7.35 0 0 0 5 9c-4 0-5 3-5 4 0 .667.333 1 1 1h4.216A2.238 2.238 0 0 1 5 13c0-1.01.377-2.042 1.09-2.904.243-.294.526-.569.846-.816zM4.92 10A5.493 5.493 0 0 0 4 13H1c0-.26.164-1.03.76-1.724.545-.636 1.492-1.256 3.16-1.275zM1.5 5.5a3 3 0 1 1 6 0 3 3 0 0 1-6 0zm3-2a2 2 0 1 0 0 4 2 2 0 0 0 0-4z"></path>
+                            </svg>
+                        </div>
+                    {% endif %}
                 </div>
                 <div class="col-lg-8">
                     <h1 class="display-5 lh-1 mb-3 ms-3">{{ artist["artist"]["artist_name"] }}</h1>
@@ -55,10 +58,8 @@
                                             <div class="col-md-3 transp">
 
                                                 {% if c["concert_photo"] %}
-                                                    {#                                                    <div class="col-md-3 transp">#}
                                                     <img class="card-img-top img-fluid img-cover" role="img"
                                                          src="{{ c["concert_photo"] }}" alt="img">
-                                                    {#                                                    </div>#}
                                                 {% else %}
                                                     <svg class="bd-placeholder-img card-img-top" width="100%"
                                                          height="100%"
@@ -69,7 +70,6 @@
                                                         <rect width="100%" height="100%" fill="#55595c"/>
                                                     </svg>
                                                 {% endif %}
-
 
                                             </div>
                                             <div class="col">
@@ -93,7 +93,6 @@
                                                 <a href="{{ url_for('concert_page', id=c["concert_id"]) }}"
                                                    class="stretched-link text-decoration-none"></a>
                                             </div>
-
                                         </div>
                                     </div>
                                 {% endfor %}
@@ -106,7 +105,7 @@
                                         Reviews
                                     </h1>
                                     <div>
-                                        {% if true %}
+                                        {% if session['logged_in'] %}
                                             <div>
                                                 <form class="g-0 mb-2">
                                                     <div class="d-flex justify-content-between">
@@ -136,10 +135,11 @@
                                                         <img class="bg-light rounded-circle text-white p-1" width="40"
                                                              height="40"
                                                              alt="avatar"
-                                                             src="https://raw.githubusercontent.com/twbs/icons/main/icons/person.svg">
-                                                        <span class="text-dark my-auto ms-3">User</span>
+                                                             src="https://raw.githubusercontent.com/twbs/icons/main/icons/person.svg"> {# TODO #}
+                                                        <span class="text-dark my-auto ms-3">User</span> {# TODO #}
+                                                        <span class="text-dark my-auto ms-3">5 <i class="bi bi-star"></i></span> {# TODO #}
                                                     </div>
-                                                    <p>
+                                                    <p> {# TODO #}
                                                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
                                                         varius
                                                         sagittis massa non vulputate. In luctus arcu non tempor
@@ -152,8 +152,6 @@
                                                         varius.
                                                     </p>
                                                 </div>
-
-
                                             {% endfor %}
                                         </div>
                                     </div>
