--- a/app/frontend/templates/concert.html
+++ b/app/frontend/templates/concert.html
@@ -6,12 +6,19 @@
         <div class="container col-xxl-8 px-2 py-2 bg-white">
             <div class="row flex-lg-row align-items-center g-0 pt-5 pb-1">
                 <div class="col-10 col-sm-8 col-lg-4 mb-3 mx-auto px-4 py-4 d-flex justify-content-center">
-
-                    <div class="ratio ratio-1x1">
-                        <img class="card-img-top img-fluid img-cover" width="300" height="300"
-                             src="{{ concert["concert_photo"] }}" alt="img">
-                    </div>
-
+                    {% if concert["concert_photo"] %}
+                        <div class="ratio ratio-1x1">
+                            <img class="card-img-top img-fluid img-cover" width="300" height="300"
+                                 src="{{ concert["concert_photo"] }}" alt="img">
+                        </div>
+                    {% else %}
+                        <div class="bg-light rounded-circle bd-placeholder-img">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="300" height="300" fill="#777"
+                                 class="bi bi-people p-5" viewBox="0 0 16 16">
+                                <path d="M15 14s1 0 1-1-1-4-5-4-5 3-5 4 1 1 1 1h8zm-7.978-1A.261.261 0 0 1 7 12.996c.001-.264.167-1.03.76-1.72C8.312 10.629 9.282 10 11 10c1.717 0 2.687.63 3.24 1.276.593.69.758 1.457.76 1.72l-.008.002a.274.274 0 0 1-.014.002H7.022zM11 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0zM6.936 9.28a5.88 5.88 0 0 0-1.23-.247A7.35 7.35 0 0 0 5 9c-4 0-5 3-5 4 0 .667.333 1 1 1h4.216A2.238 2.238 0 0 1 5 13c0-1.01.377-2.042 1.09-2.904.243-.294.526-.569.846-.816zM4.92 10A5.493 5.493 0 0 0 4 13H1c0-.26.164-1.03.76-1.724.545-.636 1.492-1.256 3.16-1.275zM1.5 5.5a3 3 0 1 1 6 0 3 3 0 0 1-6 0zm3-2a2 2 0 1 0 0 4 2 2 0 0 0 0-4z"></path>
+                            </svg>
+                        </div>
+                    {% endif %}
                 </div>
                 <div class="col-lg-8">
                     <h1 class="display-5 lh-1 mb-3 ms-3">{{ concert["concert_name"] }}</h1>
@@ -23,13 +30,12 @@
                     <div class="col-md-2 mt-2 px-2 d-flex flex-column">
                         <div class="py-4 bg-white">
                             <h5 class="">Place</h5>
-                            <p class="">{{ concert["concert_address"] }}</p>
+                            <p class="">{{ concert["concert_address"] }}</p> {# TODO #}
                             <h5 class="">Date</h5>
                             <p class="">{{ concert["concert_date"]|dt }}</p>
                             <p><a tabindex="0" class="btn btn-lg btn-primary text-light" role="button"
                                   data-bs-toggle="popover" data-bs-trigger="focus" title="Ticket"
-                                  data-bs-content="You bought ticket!">Buy
-                                tickets</a></p>
+                                  data-bs-content="You bought ticket!">Buy tickets</a></p> {# TODO #}
                         </div>
                     </div>
                     <div class="col-md-3 order-md-2 mt-2 px-2 d-flex flex-column">
@@ -39,9 +45,19 @@
                             </h1>
                             {% for ar in concert["performances"] %}
                                 <div class="d-flex my-2">
-                                    <img class="bg-light rounded-circle img-cover text-white p-1" width="50" height="50"
-                                         alt="avatar"
-                                         src="{{ ar["artist_photo"] }}">
+                                    {% if ar["artist_photo"] %}
+                                        <img class="bg-light rounded-circle img-cover text-white p-1" width="50"
+                                             height="50"
+                                             alt="avatar"
+                                             src="{{ ar["artist_photo"] }}">
+                                    {% else %}
+                                        <div class="bg-light rounded-circle bd-placeholder-img">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#777"
+                                                 class="bi bi-people p-1" viewBox="0 0 16 16">
+                                                <path d="M15 14s1 0 1-1-1-4-5-4-5 3-5 4 1 1 1 1h8zm-7.978-1A.261.261 0 0 1 7 12.996c.001-.264.167-1.03.76-1.72C8.312 10.629 9.282 10 11 10c1.717 0 2.687.63 3.24 1.276.593.69.758 1.457.76 1.72l-.008.002a.274.274 0 0 1-.014.002H7.022zM11 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0zM6.936 9.28a5.88 5.88 0 0 0-1.23-.247A7.35 7.35 0 0 0 5 9c-4 0-5 3-5 4 0 .667.333 1 1 1h4.216A2.238 2.238 0 0 1 5 13c0-1.01.377-2.042 1.09-2.904.243-.294.526-.569.846-.816zM4.92 10A5.493 5.493 0 0 0 4 13H1c0-.26.164-1.03.76-1.724.545-.636 1.492-1.256 3.16-1.275zM1.5 5.5a3 3 0 1 1 6 0 3 3 0 0 1-6 0zm3-2a2 2 0 1 0 0 4 2 2 0 0 0 0-4z"></path>
+                                            </svg>
+                                        </div>
+                                    {% endif %}
                                     <a class="text-dark my-auto ms-3"
                                        href="{{ url_for('artists_page', id=ar["artist_id"]) }}">{{ ar["artist_name"] }}</a>
                                 </div>
@@ -50,16 +66,11 @@
                     </div>
                     <div class="col-md mt-2 px-2 d-flex flex-column">
                         <div class="py-4 mb-2 bg-white">
-
                             <h1 class="display-5">
                                 Info
                             </h1>
                             <div>
-                                {#                                <p class="text-wrap">#}
-                                {#                                    {% for n in range(1000) %}#}
-                                {#                                        a#}
-                                {#                                    {% endfor %}#}
-                                {#                                </p>#}
+                                {{ concert["concert_info"] }}
                             </div>
                         </div>
 
@@ -68,13 +79,14 @@
                                 Reviews
                             </h1>
                             <div>
-                                {% if true %}
+                                {% if session['logged_in'] %}
                                     <div>
                                         <form class="g-0 mb-2">
                                             <div class="d-flex justify-content-between">
                                                 <div>
                                                     <input id="input-id" value="4" type="text" class="rating"
-                                                           data-theme="krajee-fas" data-min=0 data-max=5 data-size="sm"
+                                                           data-theme="krajee-fas" data-min=0 data-max=5
+                                                           data-size="sm"
                                                            required title="">
                                                 </div>
                                                 <div>
@@ -98,30 +110,33 @@
                                                      height="40"
                                                      alt="avatar"
                                                      src="https://raw.githubusercontent.com/twbs/icons/main/icons/person.svg">
-                                                <span class="text-dark my-auto ms-3">User</span>
+                                                {# TODO #}
+                                                <span class="text-dark my-auto ms-3">User</span> {# TODO #}
+                                                <span class="text-dark my-auto ms-3">5 <i class="bi bi-star"></i></span>
+                                                {# TODO #}
                                             </div>
-                                            <p>
-                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam varius
-                                                sagittis massa non vulputate. In luctus arcu non tempor tincidunt. Cras
-                                                ex urna, porttitor ut pulvinar vitae, commodo in nulla. Praesent commodo
-                                                ipsum eu urna dictum, vitae varius turpis ultricies. Etiam a sagittis
-                                                urna, nec fringilla quam. Aliquam iaculis massa sed placerat varius.
+                                            <p> {# TODO #}
+                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
+                                                varius
+                                                sagittis massa non vulputate. In luctus arcu non tempor
+                                                tincidunt. Cras
+                                                ex urna, porttitor ut pulvinar vitae, commodo in nulla. Praesent
+                                                commodo
+                                                ipsum eu urna dictum, vitae varius turpis ultricies. Etiam a
+                                                sagittis
+                                                urna, nec fringilla quam. Aliquam iaculis massa sed placerat
+                                                varius.
                                             </p>
                                         </div>
-
                                     {% endfor %}
                                 </div>
                             </div>
                         </div>
-
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
-
-
 
 {% endblock %}
 
