--- a/app/frontend/templates/includes/_footer.html
+++ b/app/frontend/templates/includes/_footer.html
@@ -1,7 +1,7 @@
 <footer class="footer navbar navbar-expand navbar-dark bg-dark mt-auto py-3">
     <div class="container-fluid">
 
-        <span class="navbar-text me-auto">Copyright © 2021, All Right Reserved</span>
+        <span class="navbar-text me-auto">Copyright © 2021, This is Fine Production</span>
 
         <ul class="navbar-nav ms-auto">
             <li class="nav-item me-2">
