--- a/app/frontend/templates/index.html
+++ b/app/frontend/templates/index.html
@@ -18,6 +18,7 @@
                      aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
                     <rect width="100%" height="100%" fill="#aaa"/>
                 </svg>
+                {# TODO #}
 
                 <div class="container">
                     <div class="carousel-caption text-start">
@@ -67,7 +68,7 @@
 
     <div class="container">
 
-        {% if true %}
+        {% if session['logged_in'] and session['spotify'] %}
 
             <div class="ms-5 mb-2 d-flex">
                 <span class="fs-1 fw-light underline">Recommendations</span>
@@ -77,20 +78,26 @@
             </div>
 
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 mb-5">
-                {% for n in range(15, 18) %}
+                {% for n in range(15, 18) %} {# TODO #}
                     <div class="col">
                         <div class="card shadow-sm">
 
-                            <div class="ratio ratio-16x9">
-                                <img class=" card-img-top img-fluid img-cover" role="img"
-                                     src="{{ concerts[n]["concert_photo"] }}" alt="img">
-                            </div>
-
+                            {% if concerts[n]["concert_photo"] %}
+                                <div class="ratio ratio-16x9">
+                                    <img class=" card-img-top img-fluid img-cover" role="img"
+                                         src="{{ concerts[n]["concert_photo"] }}" alt="img">
+                                </div>
+                            {% else %}
+                                <svg class="bd-placeholder-img card-img-top" width="100%" height="100%"
+                                     xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
+                                     preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title>
+                                    <rect width="100%" height="100%" fill="#55595c"/>
+                                </svg>
+                            {% endif %}
 
                             <div class="card-img-overlay d-flex flex-column justify-content-start mt-3">
                                 <h4 class="fs-2 fw-light transp text-light p-2 text-truncate">{{ concerts[n]["concert_name"] }}</h4>
                             </div>
-
 
                             <div class="card-body fs-5">
                                 <div class="d-flex ">
@@ -115,37 +122,40 @@
 
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 mb-5">
             {% for n in range(20) %}
-                <div class="col">
-                    <div class="card shadow-sm">
+                {% if concerts[n] %}
+                    <div class="col">
+                        <div class="card shadow-sm">
+                            {% if concerts[n]["concert_photo"] %}
+                                <div class="ratio ratio-16x9"> {# TODO #}
+                                    <img class=" card-img-top img-fluid img-cover" role="img"
+                                         src="{{ concerts[n]["concert_photo"] }}" alt="img">
+                                </div>
+                            {% else %}
+                                <svg class="bd-placeholder-img card-img-top" width="100%" height="100%"
+                                     xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
+                                     preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title>
+                                    <rect width="100%" height="100%" fill="#55595c"/>
+                                </svg>
+                            {% endif %}
 
-                        {#                        <svg class="bd-placeholder-img card-img-top" width="100%" height="100%"#}
-                        {#                             xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"#}
-                        {#                             preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title>#}
-                        {#                            <rect width="100%" height="100%" fill="#55595c"/>#}
-                        {#                        </svg>#}
-
-                        <div class="ratio ratio-16x9">
-                            <img class=" card-img-top img-fluid img-cover" role="img"
-                                 src="{{ concerts[n]["concert_photo"] }}" alt="img">
-                        </div>
-
-
-                        <div class="card-img-overlay d-flex flex-column justify-content-start mt-3">
-                            <h4 class="fs-2 fw-light transp text-light p-2 text-truncate">{{ concerts[n]["concert_name"] }}</h4>
-                        </div>
-
-
-                        <div class="card-body fs-5">
-                            <div class="d-flex ">
-                                <p class="card-text me-auto">{{ concerts[n]["concert_address"] }} </p>
-                                <p class="card-text">{{ concerts[n]["concert_date"]|dt }}</p>
+                            <div class="card-img-overlay d-flex flex-column justify-content-start mt-3">
+                                <h4 class="fs-2 fw-light transp text-light p-2 text-truncate">{{ concerts[n]["concert_name"] }}</h4>
                             </div>
-                            <a href="{{ url_for('concert_page', id=concerts[n]["concert_id"]) }}"
-                               class="stretched-link text-decoration-none"></a>
 
+
+                            <div class="card-body fs-5">
+                                <div class="d-flex ">
+                                    <p class="card-text me-auto">{{ concerts[n]["concert_address"] }} </p>
+                                    <p class="card-text">{{ concerts[n]["concert_date"]|dt }}</p>
+                                </div>
+                                <a href="{{ url_for('concert_page', id=concerts[n]["concert_id"]) }}"
+                                   class="stretched-link text-decoration-none"></a>
+
+                            </div>
                         </div>
                     </div>
-                </div>
+                {% endif %}
+
             {% endfor %}
 
         </div>
