--- a/app/frontend/templates/tickets.html
+++ b/app/frontend/templates/tickets.html
@@ -11,7 +11,7 @@
                      xmlns="http://www.w3.org/2000/svg"
                      aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
                     <rect width="700%" height="100%" fill="#777"/>
-                </svg>
+                </svg> {# TODO #}
             </div>
             <div class="col-lg-8">
                 <h1 class="display-5 lh-1 mb-3 ms-3">Username</h1>
@@ -34,7 +34,7 @@
                 </div>
                 <div class="d-flex flex-column flex-grow-1 ms-5">
 
-                    {% for n in range(5) %}
+                    {% for n in range(5) %} {# TODO #}
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-3">
