helluva batch of fixes

--- a/app/frontend/templates/favorites.html
+++ b/app/frontend/templates/favorites.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}My Tickets{% endblock %}
+{% block title %}Favorites{% endblock %}
 
 {% block content %}
     <div>
