--- a/app/frontend/templates/base.html
+++ b/app/frontend/templates/base.html
@@ -8,8 +8,8 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
 
-        <link href="../static/theme.min.css" rel="stylesheet">
-        <link href="../static/main.css" rel="stylesheet">
+        <link href="/static/theme.min.css" rel="stylesheet">
+        <link href="/static/main.css" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/gh/kartik-v/bootstrap-star-rating@4.0.9/css/star-rating.min.css" media="all" rel="stylesheet" type="text/css" />
         <link href="https://cdn.jsdelivr.net/gh/kartik-v/bootstrap-star-rating@4.0.9/themes/krajee-fas/theme.css" media="all" rel="stylesheet" type="text/css" />
 
