--- a/app/frontend/templates/index.html
+++ b/app/frontend/templates/index.html
@@ -4,67 +4,83 @@
 {% block content %}
 
 
-    <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active"
-                    aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
-
-        </div>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
-                     aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-                    <rect width="100%" height="100%" fill="#aaa"/>
-                </svg>
-                {# TODO #}
-
-                <div class="container">
-                    <div class="carousel-caption text-start">
-                        <h1 class="display-2">{{ concerts[0]["concert_name"] }}</h1>
-                        <p>{{ concerts[0]["concert_address"] }} <i
-                                class="bi bi-dot"></i> {{ concerts[0]["concert_date"]|dt }}</p>
-                        <p><a class="btn btn-lg btn-primary text-light"
-                              href="{{ url_for('concert_page', id=concerts[0]["concert_id"]) }}">Buy
-                            tickets</a></p>
-                    </div>
-                </div>
+    {% if concerts|length > 0 %}
+        <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                {% if concerts[1] %}
+                    <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                    {% if concerts[1] %}
+                        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2"
+                                aria-label="Slide 3"></button>
+                    {% endif %}
+                {% endif %}
             </div>
-            {% for n in range(2) %}
-                <div class="carousel-item">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
                     <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
                          aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-                        <rect width="100%" height="100%" fill="#aaa"/>
+                        <rect width="100%" height="100%" fill="#aaa"></rect>
                     </svg>
 
-                    <div class="container">
-                        <div class="carousel-caption">
-                            <div class="text-start">
-                                <h1 class="display-2">{{ concerts[n+1]["concert_name"] }}</h1>
-                                <p>{{ concerts[n+1]["concert_address"] }} <i
-                                        class="bi bi-dot"></i> {{ concerts[n+1]["concert_date"]|dt }}</p>
-                                <p><a class="btn btn-lg btn-primary text-light"
-                                      href="{{ url_for('concert_page', id=concerts[n+1]["concert_id"]) }}">Buy
-                                    tickets</a></p>
+                    <div class="carousel-caption container row" style="height: 370px;">
+                        {% if concerts[0]["concert_photo"] %}
+                            <div class="col col-4 d-none d-lg-block me-3">
+                                <img class="img-cover shadow " width="300" height="300"
+                                     src="{{ concerts[0]["concert_photo"] }}" alt="img">
                             </div>
-
-
+                        {% endif %}
+                        <div class="col text-start py-5">
+                            <h1 class="display-2">{{ concerts[0]["concert_name"] }}</h1>
+                            <p>{{ concerts[0]["concert_address"] }} <i
+                                    class="bi bi-dot"></i> {{ concerts[0]["concert_date"]|dt }}</p>
+                            <p><a class="btn btn-lg btn-primary text-light"
+                                  href="{{ url_for('concert_page', id=concerts[0]["concert_id"]) }}">Buy
+                                tickets</a></p>
                         </div>
-
                     </div>
                 </div>
-            {% endfor %}
+                {% for n in range(2) %}
+                    {% if concerts[n+1] %}
+                        <div class="carousel-item">
+                            <svg class="bd-placeholder-img" width="100%" height="100%"
+                                 xmlns="http://www.w3.org/2000/svg"
+                                 aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+                                <rect width="100%" height="100%" fill="#aaa"></rect>
+                            </svg>
+
+                            <div class="carousel-caption container row" style="height: 370px;">
+                                {% if concerts[n+1]["concert_photo"] %}
+                                    <div class="col col-4 d-none d-lg-block me-3">
+                                        <img class="img-cover shadow " width="300" height="300"
+                                             src="{{ concerts[n+1]["concert_photo"] }}" alt="img">
+                                    </div>
+                                {% endif %}
+                                <div class="col text-start py-5">
+                                    <h1 class="display-2">{{ concerts[n+1]["concert_name"] }}</h1>
+                                    <p>{{ concerts[0]["concert_address"] }} <i
+                                            class="bi bi-dot"></i> {{ concerts[n+1]["concert_date"]|dt }}</p>
+                                    <p><a class="btn btn-lg btn-primary text-light"
+                                          href="{{ url_for('concert_page', id=concerts[n+1]["concert_id"]) }}">Buy
+                                        tickets</a></p>
+                                </div>
+                            </div>
+                        </div>
+                    {% endif %}
+                {% endfor %}
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-    </div>
+    {% endif %}
 
     <div class="container">
 
